--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 Flask==1.1.1
 flask-restx==0.1.1
 python-dotenv==0.12.0
+pymysql==0.9.3
+SQLAlchemy==1.3.11
+marshmallow==3.5.1
+marshmallow-sqlalchemy==0.22.3
+flask-bcrypt==0.7.1
+flask-jwt-extended==3.24.1
