--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ Flask==1.1.1
 flask-restx==0.1.1
 python-dotenv==0.12.0
 pymysql==0.9.3
+Flask-SQLAlchemy==2.4.1
+flask-marshmallow==0.11.0
 SQLAlchemy==1.3.11
 marshmallow==3.5.1
 marshmallow-sqlalchemy==0.22.3
