--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Flask==1.1.1
 flask-restx==0.1.1
 python-dotenv==0.12.0
 pymysql==0.9.3
-Flask-SQLAlchemy==2.4.1
+flask_sqlalchemy==2.4.1
 flask-marshmallow==0.11.0
 SQLAlchemy==1.3.11
 marshmallow==3.5.1
@@ -10,3 +10,5 @@ marshmallow-sqlalchemy==0.22.3
 flask-bcrypt==0.7.1
 flask-jwt-extended==3.24.1
 Werkzeug==0.16.1
+mysql-connector-python==8.0.17
+mysqlclient==1.4.6
