--- a/.gitignore
+++ b/.gitignore
@@ -12,15 +12,7 @@ lib/
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
+# Unit test / coverage reportsgit
 *.cover
 .hypothesis/
 .pytest_cache/
